--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   <body>
     <div class="wrapper">
       <header>
-        <div class="pinkDiag"></div>
-        <div class="blueDiag"></div>
+        <!-- <div class="pinkDiag"></div>
+        <div class="blueDiag"></div> -->
         <nav>
           <img src="/image/logo.png" alt="" />
           <ul>
@@ -123,8 +123,6 @@
         </div>
       </main>
       <footer>
-        <div class="pinkDiagFoot"></div>
-        <div class="blueDiagFoot"></div>
         <div class="footWrapper">
           <div class="footHeader">
             <h1>Pricing Plans</h1>
